--- a/Website Front End/public/index.html
+++ b/Website Front End/public/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>RecipeBowl</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
